--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,13 +20,13 @@ jobs:
       matrix:
         include:
 
-          - job_name: Linux x86_64 multilib
+          - job_name: Linux x86_64
             os: ubuntu-18.04
             arch: x86_64
             bootstrap_cmake_flags: -DBUILD_LTO_LIBS=ON
             # To improve portability of the generated binaries, link the C++ standard library statically.
             extra_cmake_flags: >-
-              -DMULTILIB=ON
+              -DMULTILIB=OFF
               -DBUILD_LTO_LIBS=ON
               -DCMAKE_C_COMPILER=/home/runner/work/ldc/clang/bin/clang
               -DCMAKE_CXX_COMPILER=/home/runner/work/ldc/clang/bin/clang++
@@ -46,27 +46,6 @@ jobs:
               -DBUILD_LTO_LIBS=ON
               -DD_COMPILER_FLAGS="-gcc=/usr/bin/c++ -O -flto=full -defaultlib=phobos2-ldc-lto,druntime-ldc-lto"
               -DEXTRA_CXXFLAGS=-flto=full
-            with_pgo: true
-
-          - job_name: Windows x64
-            os: windows-2019
-            arch: x64
-            bootstrap_cmake_flags: -DBUILD_LTO_LIBS=ON
-            extra_cmake_flags: >-
-              -DBUILD_LTO_LIBS=ON
-              "-DD_COMPILER_FLAGS=-O -flto=full -defaultlib=phobos2-ldc-lto,druntime-ldc-lto"
-              -DEXTRA_CXXFLAGS=-flto=full
-            with_pgo: true
-
-          - job_name: Windows x86
-            os: windows-2019
-            arch: x86
-            bootstrap_cmake_flags: -DBUILD_LTO_LIBS=ON
-            # Undefined symbol errors with FullLTO; ThinLTO works.
-            extra_cmake_flags: >-
-              -DBUILD_LTO_LIBS=ON
-              "-DD_COMPILER_FLAGS=-O -flto=thin -defaultlib=phobos2-ldc-lto,druntime-ldc-lto"
-              -DEXTRA_CXXFLAGS=-flto=thin
             with_pgo: true
 
     name: ${{ matrix.job_name }}
@@ -106,21 +85,6 @@ jobs:
       - name: Run LDC D unittests
         if: success() || failure()
         uses: ./.github/actions/4a-test-ldc2
-      - name: Run LIT testsuite
-        if: success() || failure()
-        uses: ./.github/actions/4b-test-lit
-        with:
-          arch: ${{ matrix.arch }}
-      - name: Run DMD testsuite
-        if: success() || failure()
-        uses: ./.github/actions/4c-test-dmd
-        with:
-          arch: ${{ matrix.arch }}
-      - name: Run defaultlib unittests & druntime integration tests
-        if: success() || failure()
-        uses: ./.github/actions/4d-test-libs
-        with:
-          arch: ${{ matrix.arch }}
 
       - name: Install LDC & make portable
         uses: ./.github/actions/5-install
@@ -167,21 +131,6 @@ jobs:
               -DD_COMPILER_FLAGS="-O -flto=full -defaultlib=phobos2-ldc-lto,druntime-ldc-lto"
               -DEXTRA_CXXFLAGS=-flto=full
             with_pgo: true
-
-          - job_name: Android armv7a
-            host_os: ubuntu-18.04
-            os: android
-            arch: armv7a
-            android_x86_arch: i686
-
-          - job_name: Android aarch64
-            host_os: ubuntu-18.04
-            os: android
-            arch: aarch64
-            android_x86_arch: x86_64
-            extra_cmake_flags: >-
-              -DLDC_INSTALL_LLVM_RUNTIME_LIBS_OS=linux
-              -DLDC_INSTALL_LLVM_RUNTIME_LIBS_ARCH=aarch64-android
 
     name: ${{ matrix.job_name }}
     runs-on: ${{ matrix.host_os }}
@@ -251,16 +200,6 @@ jobs:
       - uses: actions/checkout@v3
       - name: Merge x86_64 & arm64 packages to universal one
         uses: ./.github/actions/merge-macos
-
-  merge-windows:
-    name: Windows multilib
-    runs-on: windows-latest
-    timeout-minutes: 30
-    needs: build-native
-    steps:
-      - uses: actions/checkout@v3
-      - name: Merge x64 & x86 packages to multilib one & build installer
-        uses: ./.github/actions/merge-windows
 
 
   upload-to-github:
