automatically upload CI builds of `weka-master` branch (instead of `master` branch) to Github

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -204,7 +204,7 @@ jobs:
 
   upload-to-github:
     name: Upload to GitHub
-    if: startsWith(github.ref, 'refs/tags/v') || github.ref == 'refs/heads/master'
+    if: startsWith(github.ref, 'refs/tags/v') || github.ref == 'refs/heads/weka-master'
     runs-on: ubuntu-latest
     timeout-minutes: 30
     needs:
