--- a/.github/actions/merge-macos/action.yml
+++ b/.github/actions/merge-macos/action.yml
@@ -25,7 +25,7 @@ runs:
         # rename/copy lib dirs
         mv lib                            lib-x86_64
         cp -R ../ldc2-arm64/lib           lib-arm64
-        cp -R ../ldc2-arm64/lib-ios-arm64 ./
+        # cp -R ../ldc2-arm64/lib-ios-arm64 ./
 
         # merge executables to universal ones
         for exe in bin/*; do
@@ -84,15 +84,15 @@ runs:
         perl -0777 -pi -e "s|\\ndefault:\\n.+?\\n\\};|$sections|s" etc/ldc2.conf
         cat etc/ldc2.conf
 
-    - name: Run x86_64/arm64 macOS/iOS cross-compilation smoke tests
-      shell: bash
-      run: |
-        set -eux
-        echo 'void main() { import std.stdio; writefln("Hello world, %d bits", size_t.sizeof * 8); }' > hello.d
-        for triple in x86_64-apple-macos11.0 arm64-apple-macos11.0 x86_64-apple-ios12.0-simulator arm64-apple-ios12.0; do
-          ldc2-universal/bin/ldc2 -mtriple="$triple" hello.d
-          ldc2-universal/bin/ldc2 -mtriple="$triple" hello.d -link-defaultlib-shared
-        done
+#    - name: Run x86_64/arm64 macOS/iOS cross-compilation smoke tests
+#      shell: bash
+#      run: |
+#        set -eux
+#        echo 'void main() { import std.stdio; writefln("Hello world, %d bits", size_t.sizeof * 8); }' > hello.d
+#        for triple in x86_64-apple-macos11.0 arm64-apple-macos11.0 x86_64-apple-ios12.0-simulator arm64-apple-ios12.0; do
+#          ldc2-universal/bin/ldc2 -mtriple="$triple" hello.d
+#          ldc2-universal/bin/ldc2 -mtriple="$triple" hello.d -link-defaultlib-shared
+#        done
 
     - name: Pack universal package
       shell: bash
