--- a/.github/actions/1-setup/action.yml
+++ b/.github/actions/1-setup/action.yml
@@ -21,8 +21,10 @@ runs:
         # Don't use latest gdb v10+ from Ubuntu toolchain PPA with regressions, use official v9
         sudo apt-get -yq install \
           git-core cmake g++-multilib \
-          libcurl4 libcurl4:i386 \
+          libcurl4 libcurl4:i386 libzstd-dev \
           curl gdb=9.1-0ubuntu1 p7zip-full tzdata unzip zip python3-pip
+        # Make sure to link libzstd statically
+        sudo rm /usr/lib/x86_64-linux-gnu/libzstd.so
 
     - name: 'Linux: Download & extract clang' # into ../clang
       if: runner.os == 'Linux'
@@ -94,7 +96,7 @@ runs:
 
         llvm/bin/llvm-config --version
 
-    - name: 'Linux: Make lld the default linker' # possibly with enabled assertions unfortunately
+    - name: 'Linux: Make lld the default linker'
       if: runner.os == 'Linux'
       shell: bash
       run: |
@@ -103,12 +105,13 @@ runs:
         ld --version
 
     - name: Install ninja
-      uses: seanmiddleditch/gha-setup-ninja@v3
+      uses: symmetryinvestments/gha-setup-ninja@v2
 
     - name: Install D host compiler
       uses: dlang-community/setup-dlang@v1
       with:
-        compiler: ldc-latest
+        # macOS arm64: use LDC v1.39.0 using LLVM v17, as Xcode v16
+        compiler: ${{ inputs.arch == 'arm64' && 'ldc-1.39.0' || 'ldc-latest' }}
     - name: 'Posix: Clear LD_LIBRARY_PATH env variable' # don't use host druntime/Phobos .so/.dylib etc.
       if: runner.os != 'Windows'
       shell: bash
@@ -119,8 +122,11 @@ runs:
       run: |
         set -euxo pipefail
         python3 --version
-        python3 -m pip install --user setuptools wheel
-        python3 -m pip install --user lit
+        if [[ '${{ runner.os }}-${{ inputs.arch }}' == 'macOS-arm64' ]]; then
+          brew install lit
+        else
+          python3 -m pip install --user lit
+        fi
         python3 -c "import lit.main; lit.main.main();" --version . | head -n 1
 
     # the druntime tests require GNU make
