--- a/.github/actions/6-integration-test/action.yml
+++ b/.github/actions/6-integration-test/action.yml
@@ -19,15 +19,15 @@ runs:
         installed/bin/ldc2 hello.d -link-defaultlib-shared
         ./hello
 
-    - name: Run hello-world integration test with LTO
-      shell: bash
-      run: |
-        set -eux
-        cd ..
-        for mode in thin full; do
-          installed/bin/ldc2 hello.d -of=hello_$mode -flto=$mode -defaultlib=phobos2-ldc-lto,druntime-ldc-lto
-          ./hello_$mode
-        done
+#    - name: Run hello-world integration test with LTO
+#      shell: bash
+#      run: |
+#        set -eux
+#        cd ..
+#        for mode in thin full; do
+#          installed/bin/ldc2 hello.d -of=hello_$mode -flto=$mode -defaultlib=phobos2-ldc-lto,druntime-ldc-lto
+#          ./hello_$mode
+#        done
 
     - name: Run dynamic-compile integration test
       # disabled since LLVM 12, needs https://github.com/ldc-developers/ldc/pull/3184
