--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,30 +37,43 @@ jobs:
             with_pgo: true
 
           - job_name: macOS x86_64
-            os: macos-11
+            os: macos-14
             arch: x86_64
             bootstrap_cmake_flags: >-
               -DBUILD_LTO_LIBS=ON
-              -DD_COMPILER_FLAGS=-gcc=/usr/bin/c++
             # https://github.com/ldc-developers/ldc/issues/4462:
             # When using LTO, we need to explicitly export ~all symbols for plugin support via `ld64 -exported_symbol '__*'`.
             # Additionally `-w` to suppress resulting linker warnings.
             extra_cmake_flags: >-
               -DBUILD_LTO_LIBS=ON
-              -DD_COMPILER_FLAGS="-gcc=/usr/bin/c++ -O -flto=full -defaultlib=phobos2-ldc-lto,druntime-ldc-lto -L-exported_symbol '-L__*' -L-w"
+              -DD_COMPILER_FLAGS="-O -flto=full -defaultlib=phobos2-ldc-lto,druntime-ldc-lto -L-exported_symbol '-L__*' -L-w"
+              -DEXTRA_CXXFLAGS=-flto=full
+            with_pgo: true
+
+          - job_name: macOS arm64
+            os: macos-14
+            arch: arm64
+            bootstrap_cmake_flags: >-
+              -DBUILD_LTO_LIBS=ON
+            extra_cmake_flags: >-
+              -DBUILD_LTO_LIBS=ON
+              -DD_COMPILER_FLAGS="-O -flto=full -defaultlib=phobos2-ldc-lto,druntime-ldc-lto -L-exported_symbol '-L__*' -L-w"
               -DEXTRA_CXXFLAGS=-flto=full
             with_pgo: true
 
     name: ${{ matrix.job_name }}
     runs-on: ${{ matrix.os }}
-    timeout-minutes: 150
+    timeout-minutes: 90
     env:
-      MACOSX_DEPLOYMENT_TARGET: 10.12
+      MACOSX_DEPLOYMENT_TARGET: ${{ matrix.arch == 'arm64' && '11.0' || '10.12' }}
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
         with:
           submodules: true
           fetch-depth: 50
+      - name: 'macOS 14: Switch to Xcode 16'
+        if: matrix.os == 'macos-14'
+        run: sudo xcode-select -switch /Applications/Xcode_16.app
       - name: Install prerequisites
         uses: ./.github/actions/1-setup
         with:
@@ -115,93 +128,13 @@ jobs:
         with:
           arch: ${{ matrix.arch }}
 
-
-  # Cross-compilation jobs for non-native targets.
-  # druntime/Phobos/LDC unittests aren't built; all test stages are skipped.
-  build-cross:
-    strategy:
-      fail-fast: false
-      matrix:
-        include:
-
-          - job_name: macOS arm64
-            host_os: macos-11
-            os: osx
-            arch: arm64
-            bootstrap_cmake_flags: -DD_COMPILER_FLAGS=-gcc=/usr/bin/c++
-            # see native macOS job comment for extra flags (https://github.com/ldc-developers/ldc/issues/4462)
-            extra_cmake_flags: >-
-              -DBUILD_LTO_LIBS=ON
-              -DD_COMPILER_FLAGS="-O -flto=full -defaultlib=phobos2-ldc-lto,druntime-ldc-lto -L-exported_symbol '-L__*' -L-w"
-              -DEXTRA_CXXFLAGS=-flto=full
-            with_pgo: true
-
-    name: ${{ matrix.job_name }}
-    runs-on: ${{ matrix.host_os }}
-    timeout-minutes: 60
-    env:
-      MACOSX_DEPLOYMENT_TARGET: 11.0
-    steps:
-      - uses: actions/checkout@v3
-        with:
-          submodules: true
-          fetch-depth: 50
-      - name: Install prerequisites
-        uses: ./.github/actions/1-setup
-        with:
-          clang_version: ${{ env.CLANG_VERSION }}
-          llvm_version: ${{ env.LLVM_VERSION }}
-          arch: x86_64
-      - name: Build bootstrap LDC
-        uses: ./.github/actions/2-build-bootstrap
-        with:
-          cmake_flags: ${{ matrix.bootstrap_cmake_flags }}
-      - name: Build LDC with PGO instrumentation & gather profile from compiling default libs
-        if: matrix.with_pgo
-        uses: ./.github/actions/2a-build-pgo
-        with:
-          cmake_flags: ${{ matrix.bootstrap_cmake_flags }}
-      - name: Cross-compile LDC to ${{ matrix.os }}-${{ matrix.arch }}
-        uses: ./.github/actions/3-build-cross
-        with:
-          arch: ${{ matrix.arch }}
-          os: ${{ matrix.os }}
-          llvm_version: ${{ env.LLVM_VERSION }}
-          cmake_flags: ${{ matrix.extra_cmake_flags }}
-          with_pgo: ${{ matrix.with_pgo }}
-
-      - name: Install LDC & make portable
-        uses: ./.github/actions/5-install
-        with:
-          cross_compiling: true
-      - name: 'macOS: Cross-compile iOS libraries, copy to install dir & extend ldc2.conf'
-        if: matrix.os == 'osx'
-        uses: ./.github/actions/5a-ios
-        with:
-          arch: ${{ matrix.arch }}
-      - name: 'Android: Cross-compile ${{ matrix.android_x86_arch }} libraries & copy to install dir'
-        if: matrix.os == 'android'
-        uses: ./.github/actions/5a-android-x86
-        with:
-          arch: ${{ matrix.android_x86_arch }}
-
-      - name: Create package & upload artifact(s)
-        uses: ./.github/actions/7-package
-        with:
-          arch: ${{ matrix.arch }}
-          os: ${{ matrix.os }}
-          cross_target_triple: ${{ env.CROSS_TRIPLE }}
-
-
   merge-macos:
     name: macOS universal
     runs-on: macos-latest
     timeout-minutes: 30
-    needs:
-      - build-native
-      - build-cross
+    needs: build-native
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
       - name: Merge x86_64 & arm64 packages to universal one
         uses: ./.github/actions/merge-macos
 
@@ -213,11 +146,10 @@ jobs:
     timeout-minutes: 30
     needs:
       - build-native
-      - build-cross
       - merge-macos
     permissions:
       contents: write
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
       - name: Upload all artifacts to GitHub release
         uses: ./.github/actions/upload-to-github
