--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,7 @@
 [submodule "druntime"]
 	path = runtime/druntime
-	url = https://github.com/weka-io/druntime.git
+	url = https://github.com/yanok/druntime.git
+	branch = yanok/ctfe-attr-1.30
 [submodule "phobos"]
 	path = runtime/phobos
 	url = https://github.com/ldc-developers/phobos.git
