--- a/.github/actions/helper-build-ldc/action.yml
+++ b/.github/actions/helper-build-ldc/action.yml
@@ -15,7 +15,7 @@ inputs:
     default: ''
   build_targets:
     required: false
-    default: '' # all
+    default: 'all'
   arch:
     required: false # Windows only
 runs:
@@ -30,16 +30,19 @@ runs:
         installDir="$PWD/install"
         mkdir '${{ inputs.build_dir }}'
         cd '${{ inputs.build_dir }}'
+        # wrt. CMAKE_C[XX]_COMPILER for Apple: https://github.com/ldc-developers/ldc/issues/3901
         cmake -G Ninja ../ldc \
           -DCMAKE_BUILD_TYPE=Release \
           -DLLVM_ROOT_DIR="$PWD/../${{ inputs.llvm_dir }}" \
           -DD_COMPILER='${{ inputs.host_dc }}' \
           -DLDC_LINK_MANUALLY=OFF \
+          ${{ runner.os == 'macOS' && '-DCMAKE_C_COMPILER=/usr/bin/cc' || '' }} \
+          ${{ runner.os == 'macOS' && '-DCMAKE_CXX_COMPILER=/usr/bin/c++' || '' }} \
           ${{ inputs.specify_install_dir == 'true' && '-DCMAKE_INSTALL_PREFIX="$installDir"' || '' }} \
           ${{ inputs.specify_install_dir == 'true' && '-DINCLUDE_INSTALL_DIR="$installDir/import"' || '' }} \
           ${{ inputs.cmake_flags }}
 
-        ninja ${{ inputs.build_targets }}
+        ninja obj/ldc2.o ${{ inputs.build_targets }}
 
     # Windows: invoke CMake & ninja in MSVC env
     - if: runner.os == 'Windows'
@@ -62,4 +65,4 @@ runs:
           ${{ inputs.cmake_flags }}
         if %errorlevel% neq 0 exit /b %errorlevel%
 
-        ninja ${{ inputs.build_targets }} || exit /b
+        ninja obj/ldc2.obj ${{ inputs.build_targets }} || exit /b
