--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,13 +41,12 @@ jobs:
             arch: x86_64
             bootstrap_cmake_flags: >-
               -DBUILD_LTO_LIBS=ON
-              -DD_COMPILER_FLAGS=-gcc=/usr/bin/c++
             # https://github.com/ldc-developers/ldc/issues/4462:
             # When using LTO, we need to explicitly export ~all symbols for plugin support via `ld64 -exported_symbol '__*'`.
             # Additionally `-w` to suppress resulting linker warnings.
             extra_cmake_flags: >-
               -DBUILD_LTO_LIBS=ON
-              -DD_COMPILER_FLAGS="-gcc=/usr/bin/c++ -O -L-exported_symbol '-L__*' -L-w"
+              -DD_COMPILER_FLAGS="-O -L-exported_symbol '-L__*' -L-w"
             with_pgo: true
 
           - job_name: macOS arm64
@@ -55,10 +54,9 @@ jobs:
             arch: arm64
             bootstrap_cmake_flags: >-
               -DBUILD_LTO_LIBS=ON
-              -DD_COMPILER_FLAGS=-gcc=/usr/bin/c++
             extra_cmake_flags: >-
               -DBUILD_LTO_LIBS=ON
-              -DD_COMPILER_FLAGS="-gcc=/usr/bin/c++ -O -flto=full -defaultlib=phobos2-ldc-lto,druntime-ldc-lto -L-exported_symbol '-L__*' -L-w"
+              -DD_COMPILER_FLAGS="-O -flto=full -defaultlib=phobos2-ldc-lto,druntime-ldc-lto -L-exported_symbol '-L__*' -L-w"
               -DEXTRA_CXXFLAGS=-flto=full
             with_pgo: true
 
@@ -82,15 +80,15 @@ jobs:
           llvm_version: ${{ env.LLVM_VERSION }}
           arch: ${{ matrix.arch }}
       - name: Build bootstrap LDC
-        if: matrix.os != 'macos-14'
+        if: matrix.os != 'macos-15'
         uses: ./.github/actions/2-build-bootstrap
         with:
           cmake_flags: ${{ matrix.bootstrap_cmake_flags }}
           arch: ${{ matrix.arch }}
       # FIXME: on macOS arm64, LLVM 18 (from LDC) and LLVM 17 (from Xcode 16) seem incompatible,
       #        leading to sporadic 'libc++abi: Pure virtual function called!' compiler crashes
-      - name: 'macOS 14: Use host LDC (with Xcode-compatible LLVM version) as bootstrap LDC'
-        if: matrix.os == 'macos-14'
+      - name: 'macOS 15: Use host LDC (with Xcode-compatible LLVM version) as bootstrap LDC'
+        if: matrix.os == 'macos-15'
         run: ln -s $(dirname $(dirname $(which ldmd2))) ../bootstrap-ldc
       - name: Build LDC with PGO instrumentation & gather profile from compiling default libs
         if: matrix.with_pgo
