--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -56,8 +56,7 @@ jobs:
               -DBUILD_LTO_LIBS=ON
             extra_cmake_flags: >-
               -DBUILD_LTO_LIBS=ON
-              -DD_COMPILER_FLAGS="-O -flto=full -defaultlib=phobos2-ldc-lto,druntime-ldc-lto -L-exported_symbol '-L__*' -L-w"
-              -DEXTRA_CXXFLAGS=-flto=full
+              -DD_COMPILER_FLAGS="-O -L-exported_symbol '-L__*' -L-w"
             with_pgo: true
 
     name: ${{ matrix.job_name }}
