--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -50,7 +50,7 @@ jobs:
             with_pgo: true
 
           - job_name: macOS arm64
-            os: macos-14
+            os: macos-15
             arch: arm64
             bootstrap_cmake_flags: >-
               -DBUILD_LTO_LIBS=ON
@@ -69,8 +69,8 @@ jobs:
         with:
           submodules: true
           fetch-depth: 50
-      - name: 'macOS 14: Switch to Xcode 16'
-        if: matrix.os == 'macos-14'
+      - name: 'macOS: Switch to Xcode 16'
+        if: runner.os == 'macOS'
         run: sudo xcode-select -switch /Applications/Xcode_16.app
       - name: Install prerequisites
         uses: ./.github/actions/1-setup
@@ -79,15 +79,15 @@ jobs:
           llvm_version: ${{ env.LLVM_VERSION }}
           arch: ${{ matrix.arch }}
       - name: Build bootstrap LDC
-        if: matrix.os != 'macos-15'
+        if: runner.os != 'macOS'
         uses: ./.github/actions/2-build-bootstrap
         with:
           cmake_flags: ${{ matrix.bootstrap_cmake_flags }}
           arch: ${{ matrix.arch }}
       # FIXME: on macOS arm64, LLVM 18 (from LDC) and LLVM 17 (from Xcode 16) seem incompatible,
       #        leading to sporadic 'libc++abi: Pure virtual function called!' compiler crashes
-      - name: 'macOS 15: Use host LDC (with Xcode-compatible LLVM version) as bootstrap LDC'
-        if: matrix.os == 'macos-15'
+      - name: 'macOS: Use host LDC (with Xcode-compatible LLVM version) as bootstrap LDC'
+        if: runner.os == 'macOS'
         run: ln -s $(dirname $(dirname $(which ldmd2))) ../bootstrap-ldc
       - name: Build LDC with PGO instrumentation & gather profile from compiling default libs
         if: matrix.with_pgo
