There is no -withAsserts version of LLVM-14

--- a/.github/actions/1-setup/action.yml
+++ b/.github/actions/1-setup/action.yml
@@ -69,6 +69,9 @@ runs:
 
         # use assertions for untagged builds
         assertsSuffix="-withAsserts"
+        if [[ "$version" = 14.* ]]; then
+          assertsSuffix=""
+        fi
         if [[ '${{ github.ref }}' = refs/tags/* ]]; then
           assertsSuffix=""
         fi
