--- a/.github/actions/3-build-native/action.yml
+++ b/.github/actions/3-build-native/action.yml
@@ -8,12 +8,15 @@ inputs:
   with_pgo:
     required: false
     default: false
+  with_mimalloc:
+    required: false
+    default: false
 runs:
   using: composite
   steps:
 
     - name: 'Posix: Build mimalloc'
-      if: runner.os != 'Windows'
+      if: runner.os != 'Windows' && inputs.with_mimalloc == 'true'
       uses: ./.github/actions/helper-mimalloc
 
     - name: Build LDC & LDC D unittests & defaultlib unittest runners
@@ -23,7 +26,7 @@ runs:
         host_dc: ../bootstrap-ldc/bin/ldmd2
         specify_install_dir: true
         cmake_flags: >-
-          ${{ runner.os != 'Windows' && '-DALTERNATIVE_MALLOC_O="$PWD/../build-mimalloc/CMakeFiles/mimalloc-obj.dir/src/static.c.o"' || '' }}
+          ${{ runner.os != 'Windows' && inputs.with_mimalloc == 'true' && '-DALTERNATIVE_MALLOC_O="$PWD/../build-mimalloc/CMakeFiles/mimalloc-obj.dir/src/static.c.o"' || '' }}
           ${{ inputs.cmake_flags }}
           ${{ inputs.with_pgo == 'true' && '-DDFLAGS_LDC=-fprofile-use=../pgo-ldc/merged.profdata' || '' }}
         build_targets: all ldc2-unittest all-test-runners
