--- a/.github/actions/3-build-native/action.yml
+++ b/.github/actions/3-build-native/action.yml
@@ -22,8 +22,8 @@ runs:
         build_dir: build
         host_dc: ../bootstrap-ldc/bin/ldmd2
         specify_install_dir: true
+          #${{ runner.os != 'Windows' && '-DALTERNATIVE_MALLOC_O="$PWD/../build-mimalloc/CMakeFiles/mimalloc-obj.dir/src/static.c.o"' || '' }}
         cmake_flags: >-
-          ${{ runner.os != 'Windows' && '-DALTERNATIVE_MALLOC_O="$PWD/../build-mimalloc/CMakeFiles/mimalloc-obj.dir/src/static.c.o"' || '' }}
           ${{ inputs.cmake_flags }}
           ${{ inputs.with_pgo == 'true' && '-DDFLAGS_LDC=-fprofile-use=../pgo-ldc/merged.profdata' || '' }}
         build_targets: all ldc2-unittest all-test-runners
