--- a/.github/actions/merge-macos/action.yml
+++ b/.github/actions/merge-macos/action.yml
@@ -29,7 +29,7 @@ runs:
         # rename/copy lib dirs
         mv lib                            lib-x86_64
         cp -R ../ldc2-arm64/lib           lib-arm64
-        cp -R ../ldc2-arm64/lib-ios-arm64 ./
+        # cp -R ../ldc2-arm64/lib-ios-arm64 ./
 
         # merge executables to universal ones
         for exe in bin/*; do
@@ -37,8 +37,8 @@ runs:
           lipo -create -output $exe ../ldc2-x86_64/$exe ../ldc2-arm64/$exe
         done
 
-        ios_triple_suffix=$(grep -o -E '\-apple-ios[0-9\.]+' etc/ldc2.conf | head -n1)
-        ios_version=${ios_triple_suffix:10}
+        # ios_triple_suffix=$(grep -o -E '\-apple-ios[0-9\.]+' etc/ldc2.conf | head -n1)
+        # ios_version=${ios_triple_suffix:10}
 
         # ldc2.conf: replace the default section and add extra sections
         # note: arm64-apple-ios section already exists
@@ -83,22 +83,6 @@ runs:
                 \"%%ldcbinarypath%%/../lib-arm64\",
             ];
             rpath = \"%%ldcbinarypath%%/../lib-arm64\";
-        };
-
-        \"arm64-apple-ios\":
-        {
-            switches = [
-                \"-defaultlib=phobos2-ldc,druntime-ldc\",
-                \"-Xcc=-target\",
-                \"-Xcc=arm64-apple-ios$ios_version\",
-                \"-Xcc=-miphoneos-version-min=$ios_version\",
-                \"-Xcc=-isysroot\",
-                \"-Xcc=/Applications/Xcode.app/Contents/Developer/Platforms/iPhoneOS.platform/Developer/SDKs/iPhoneOS.sdk\",
-            ];
-            lib-dirs = [
-                \"%%ldcbinarypath%%/../lib-ios-arm64\",
-            ];
-            rpath = \"%%ldcbinarypath%%/../lib-ios-arm64\";
         };"
 
         perl -0777 -pi -e "s|\\ndefault:\\n.+?\\n\\};|$sections|s" etc/ldc2.conf
