--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -119,6 +119,9 @@ jobs:
 #        with:
 #          arch: ${{ matrix.arch }}
 
+      - name: "Linux: Cross-compile ARM64 libraries, copy to install dir & extend ldc2.conf"
+        if: runner.os == 'Linux'
+        uses: ./.github/actions/5a-linux-arm64
       - name: Run a few integration tests against the installed compiler
         uses: ./.github/actions/6-integration-test
  #     - name: 'macOS: Run iOS cross-compilation integration test'
